--- a/index.html
+++ b/index.html
@@ -13,56 +13,76 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="site-header">
-      <h1>Jam Box Studios</h1>
-      <div class="main-nav">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Reservation</a></li>
-          <li><a href="#">Studio</a></li>
-        </ul>
-      </div>
-      <img src="https://placekitten.com/1200/900" class="banner">
-    </div>
-    <div class="main-content">
+  <!-- Skip Link for Keyboard Users -->
+  <a href="#main-content" class="skip-link">Skip to Content</a>
+
+  <header class="site-header" id="header">
+    <p>Jam Box Studios</p>
+    <nav class="main-nav" role="navigation">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Reservation</a></li>
+        <li><a href="#">Studio</a></li>
+      </ul>
+    </nav>
+    <img src="https://picsum.photos/1200/900" class="banner" alt="Jam Box Studio Banner"> 
+  </header>
+
+  <main id="main-content">
+    <section class="intro">
       <h1>Welcome to Jam Box</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
-      <div class="owner">
-        <h1>Meet the owner</h1>
-        <ul>
-          <li>Name: John Doe</li>
-          <li>Title: CEO</li>
-          <li>Email: johnjoe@jambox.ca</li>
-          <li>Phone: 613-000-0000</li>
-        </ul>
-        <h1>Address</h1>
-        <p>
-          Jambox Studios
-          123 Guitar Road,
-          Musicville, Danceistan
-          B3T 0L0
-        </p>
-      </div>
-      <div class="contact-section">
-        <h1>Contact Us</h1>
-        <form action="thanks.html">
-          <label>Full Name</label>
-          <input type="text" placeholder="Full Name">
-          <input type="text" placeholder="Email">
-          <input type="text" placeholder="Subject">
-          <b>Your Message</b>
-          <textarea></textarea>
+    </section>
+
+    <section class="owner">
+      <h2>Meet the owner</h2>
+      <ul>
+        <li>Name: John Doe</li>
+        <li>Title: CEO</li>
+        <li>Email: <a href="mailto:johnjoe@jambox.ca" aria-label="Email John Doe">johnjoe@jambox.ca</a></li>
+        <li>Phone: <a href="tel:+16130000000" aria-label="Call John Doe">613-000-0000</a></li>
+      </ul>
+    </section>
+
+    <section class="address">
+      <h2>Address</h2>
+      <address>
+        Jambox Studios<br>
+        123 Guitar Road,<br>
+        Musicville, Danceistan<br>
+        B3T 0L0
+      </address>
+    </section>
+
+    <section class="contact-section">
+      <h2>Contact Us</h2>
+      <form action="thanks.html" aria-labelledby="contact-form">
+        <fieldset>
+          <legend>Contact Form</legend>
+          <label for="fullname">Full Name</label>
+          <input type="text" id="fullname" name="fullname" placeholder="Full Name" required>
+
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Email" required>
+
+          <label for="subject">Subject</label>
+          <input type="text" id="subject" name="subject" placeholder="Subject" required>
+
+          <label for="message">Your Message</label>
+          <textarea id="message" name="message" required></textarea>
+
           <button type="submit">Send</button>
-        </form>
-      </div>
-    </div>
-    <div class="site-footer">
-      &copy; 2021 Jam Box Studios
-    </div>
-  </div>
+        </fieldset>
+      </form>
+    </section>
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <p>&copy; 2021 Jam Box Studios</p>
+    <a href="#header">Scroll to top</a>
+  </footer>
 </body>
 
 </html>
